# JetCarEdge

./: README.md  package.xml  requirements.txt  setup.py
config/: edge.yaml  waypoints.yaml
docs/: jetcar_video_yolo_pipeline.md
jetcar_edge/: cloud_result_client.py  docker_orchestrator.py  edge_upload_node.py  models.py  motion_controller.py  similarity_search_controller.py  slam_bridge.py  slam_web_api.py  task_orchestrator_node.py  video_stream_manager.py  ws_client.py
launch/: edge_bringup.launch.py
scripts/: slam_smoke_test.sh  start_slam_services.sh
